--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -38,6 +38,12 @@ if ($mobileLayout == 'mobile-slider' && count($slides) > 1) {
 $componentClasses = $block->getMix();
 $componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('image_teaser/additional_css_classes');
+if ($teaserWidth == 'container' or $teaserWidth == 'container-slider') {
+    $componentClasses .= ' cs-image-teaser--container-width';
+}
+if ($block->getVar('image_teaser/use_whole_screen') == 'true' && $teaserWidth == 'container-slider') {
+    $componentClasses .= ' cs-image-teaser--use-whole-screen';
+}
 
 $contentPlacement = $imageTeaser['scenario']['contentPlacement']['id'];
 
@@ -62,9 +68,20 @@ endif;
 
 $windowWidthClass = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-image-teaser--window-width' : '';
 
-$jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig']) : '{}';
-$jsSettings = json_encode($block->getVar('image_teaser/js') ?: '{}');
+// Build JS config
+$jsSettings = $block->getVar('image_teaser/js');
+if (empty($jsSettings)) {
+    $jsSettings = [];
+}
+$additionalJsSettings = $block->getAdditionalJsSettings();
+if ($additionalJsSettings) {
+    $jsSettings = array_merge($jsSettings, $additionalJsSettings);
+}
+$jsSettings['usePagination'] = filter_var($block->getVar('image_teaser/pagination/use'), FILTER_VALIDATE_BOOL);
+$jsSettings['itemsPerView'] = (int)$itemsPerRow;
+$jsSettings['itemsCount'] = count($slides);
 
+// Grid teaser
 $gridTeaser = $block->getGridTeaser();
 
 if ($gridTeaser) {
@@ -87,7 +104,7 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
 <?= $block->getCssOnce('css/image-teaser.css'); ?>
 
 <?php if ($gridTeaser): ?>
-<li class="<?= $teaserBrickClass ?>" data-teaser-id="<?= $teaserId ?>">
+<li class="<?= $teaserBrickClass ?>" id="<?= $teaserId ?>">
 <?php endif; ?>
     <?= $this->getLayout()
         ->createBlock(\Magento\Framework\View\Element\Template::class)
@@ -100,37 +117,30 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
     ?>
 
     <div class="cs-container cs-container--image-teaser<?= $isSlider ? ' cs-container--image-teaser-slider' : '' ?><?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
-        <?php if ($teaserWidth == 'container' or $teaserWidth == 'container-slider'): ?>
-            <div class="cs-container__inner">
-        <?php endif; ?>
-            <?= $this->getLayout()
-                ->createBlock(\Magento\Framework\View\Element\Template::class)
-                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_component.phtml')
-                ->setImageTeaser($imageTeaser)
-                ->setIsSlider($isSlider)
-                ->setIsSliderMobile($isSliderMobile)
-                ->setContentPlacement($contentPlacement)
-                ->toHtml();
-            ?>
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_component.phtml')
+            ->setImageTeaser($imageTeaser)
+            ->setIsSlider($isSlider)
+            ->setIsSliderMobile($isSliderMobile)
+            ->setContentPlacement($contentPlacement)
+            ->toHtml();
+        ?>
 
-            <div class="cs-image-teaser <?= $windowWidthClass ?>
-             cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
-             cs-image-teaser--items-in-row-mobile-<?= $itemsPerRowMobile ?>
-             <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
-             <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
-             <?= $componentClasses ?>"
-                data-items-per-view="<?= $itemsPerView ?>"
-                <?= $itemsPerViewMobile ? 'data-mobile-items-per-view="' . $itemsPerViewMobile . '"' : '' ?>
-                data-is-slider="<?= $isSlider ?>"
-                data-mobile-is-slider="<?= $isSliderMobile ?>"
-                data-layout="<?= $contentPlacement ?>"
-                data-js-configuration='<?= $jsConfig; ?>'
-                data-mage-init='{ "ccImageTeaser": <?= $jsSettings ?> }'
-            >
-
+        <div class="cs-image-teaser <?= $windowWidthClass ?>
+            cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
+            cs-image-teaser--items-in-row-mobile-<?= $itemsPerRowMobile ?>
+            <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
+            <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
+            <?= $componentClasses ?>"
+            <?php if($isSlider): ?>
+            data-mage-init='{ "ccImageTeaser": <?= json_encode($jsSettings) ?> }'
+            <?php endif; ?>
+        >
+            <div class="cs-image-teaser__slides-wrapper">
                 <?= $this->getLayout()
                     ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_carousel.phtml')
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_slides.phtml')
                     ->setImageTeaser($imageTeaser)
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
@@ -138,100 +148,28 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
                     ->toHtml();
                 ?>
 
-                <div class="cs-image-teaser__carousel">
-                    <?= $this->getLayout()
-                        ->createBlock(\Magento\Framework\View\Element\Template::class)
-                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_wrapper.phtml')
-                        ->setImageTeaser($imageTeaser)
-                        ->setIsSlider($isSlider)
-                        ->setIsSliderMobile($isSliderMobile)
-                        ->setContentPlacement($contentPlacement)
-                        ->toHtml();
-                    ?>
-
-                    <div class="cs-image-teaser__wrapper cs-image-teaser__wrapper--content-<?= $contentPlacement ?>">
+                <ul class="cs-image-teaser__slides cs-image-teaser__slides--content-placement-<?= $contentPlacement ?><?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?> ">
+                    <?php $slideIndex = 0; ?>
+                    <?php foreach ($slides as $slide): ?>
                         <?= $this->getLayout()
                             ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/before_slides.phtml')
+                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
+                            ->setSlide($slide)
                             ->setImageTeaser($imageTeaser)
                             ->setIsSlider($isSlider)
                             ->setIsSliderMobile($isSliderMobile)
                             ->setContentPlacement($contentPlacement)
+                            ->setOpenLinkInNewTab($openLinkInNewTab)
+                            ->setSlideIndex($slideIndex)
                             ->toHtml();
                         ?>
-
-                        <ul class="cs-image-teaser__slides <?= $mosaicProportions != '' ? ' cs-image-teaser__slides--mosaic-scenario-' . $mosaicProportions : '' ?>">
-                            <?php $slideIndex = 0; ?>
-                            <?php foreach ($slides as $slide): ?>
-                                <?= $this->getLayout()
-                                    ->createBlock(\Magento\Framework\View\Element\Template::class)
-                                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
-                                    ->setSlide($slide)
-                                    ->setImageTeaser($imageTeaser)
-                                    ->setIsSlider($isSlider)
-                                    ->setIsSliderMobile($isSliderMobile)
-                                    ->setContentPlacement($contentPlacement)
-                                    ->setOpenLinkInNewTab($openLinkInNewTab)
-                                    ->setSlideIndex($slideIndex)
-                                    ->toHtml();
-                                ?>
-                                <?php $slideIndex++; ?>
-                            <?php endforeach; ?>
-                        </ul>
-
-                        <?= $this->getLayout()
-                            ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_slides.phtml')
-                            ->setImageTeaser($imageTeaser)
-                            ->setIsSlider($isSlider)
-                            ->setIsSliderMobile($isSliderMobile)
-                            ->setContentPlacement($contentPlacement)
-                            ->toHtml();
-                        ?>
-                    </div>
-
-                    <?= $this->getLayout()
-                        ->createBlock(\Magento\Framework\View\Element\Template::class)
-                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_wrapper.phtml')
-                        ->setImageTeaser($imageTeaser)
-                        ->setIsSlider($isSlider)
-                        ->setIsSliderMobile($isSliderMobile)
-                        ->setContentPlacement($contentPlacement)
-                        ->toHtml();
-                    ?>
-
-                    <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/navigation/show')): ?>
-                        <?= $this->getLayout()
-                            ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-prev.phtml')
-                            ->setIcon($block->getVar('image_teaser/navigation/arrows/prev/path'))
-                            ->setImageTeaserData($imageTeaser)
-                            ->toHtml();
-                        ?>
-                        <?= $this->getLayout()
-                            ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-next.phtml')
-                            ->setIcon($block->getVar('image_teaser/navigation/arrows/next/path'))
-                            ->setImageTeaserData($imageTeaser)
-                            ->toHtml();
-                        ?>
-                    <?php endif; ?>
-
-                    <?= $this->getLayout()
-                        ->createBlock(\Magento\Framework\View\Element\Template::class)
-                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_nav.phtml')
-                        ->setImageTeaser($imageTeaser)
-                        ->setIsSlider($isSlider)
-                        ->setIsSliderMobile($isSliderMobile)
-                        ->setContentPlacement($contentPlacement)
-                        ->toHtml();
-                    ?>
-
-                </div>
+                        <?php $slideIndex++; ?>
+                    <?php endforeach; ?>
+                </ul>
 
                 <?= $this->getLayout()
                     ->createBlock(\Magento\Framework\View\Element\Template::class)
-                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_carousel.phtml')
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_slides.phtml')
                     ->setImageTeaser($imageTeaser)
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
@@ -239,13 +177,41 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
                     ->toHtml();
                 ?>
 
+                <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/navigation/show')): ?>
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-prev.phtml')
+                        ->setIcon($block->getVar('image_teaser/navigation/arrows/prev/path'))
+                        ->setImageTeaserData($imageTeaser)
+                        ->toHtml();
+                    ?>
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/nav-next.phtml')
+                        ->setIcon($block->getVar('image_teaser/navigation/arrows/next/path'))
+                        ->setImageTeaserData($imageTeaser)
+                        ->toHtml();
+                    ?>
+                <?php endif; ?>
+
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_nav.phtml')
+                    ->setImageTeaser($imageTeaser)
+                    ->setIsSlider($isSlider)
+                    ->setIsSliderMobile($isSliderMobile)
+                    ->setContentPlacement($contentPlacement)
+                    ->toHtml();
+                ?>
+            </div>
+
+            <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/pagination/use')): ?>
                 <?= $this->getLayout()
                     ->createBlock(\Magento\Framework\View\Element\Template::class)
                     ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/pagination.phtml')
                     ->setImageTeaserData($imageTeaser)
                     ->setIsSlider($isSlider)
                     ->setIsSliderMobile($isSliderMobile)
-                    ->setShowPagination($block->getVar('image_teaser/pagination/show'))
                     ->toHtml();
                 ?>
 
@@ -258,21 +224,18 @@ $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
                     ->setContentPlacement($contentPlacement)
                     ->toHtml();
                 ?>
-            </div>
+            <?php endif; ?>
+        </div>
 
-            <?= $this->getLayout()
-                ->createBlock(\Magento\Framework\View\Element\Template::class)
-                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_component.phtml')
-                ->setImageTeaser($imageTeaser)
-                ->setIsSlider($isSlider)
-                ->setIsSliderMobile($isSliderMobile)
-                ->setContentPlacement($contentPlacement)
-                ->toHtml();
-            ?>
-
-        <?php if ($teaserWidth == 'container' or $teaserWidth == 'container-slider'): ?>
-            </div>
-        <?php endif; ?>
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/elements/hotspots/after_component.phtml')
+            ->setImageTeaser($imageTeaser)
+            ->setIsSlider($isSlider)
+            ->setIsSliderMobile($isSliderMobile)
+            ->setContentPlacement($contentPlacement)
+            ->toHtml();
+        ?>
     </div>
 
     <?= $this->getLayout()
