--- a/view/frontend/templates/component/image_teaser/elements/pagination.phtml
+++ b/view/frontend/templates/component/image_teaser/elements/pagination.phtml
@@ -1,10 +1,1 @@
-<?php
-$imageTeaserData = $block->getImageTeaserData();
-$isSlider = $block->getIsSlider();
-$isSliderMobile = $block->getIsSliderMobile();
-$showPagination = $block->getShowPagination();
-?>
-
-<?php if (($isSlider or $isSliderMobile) && $showPagination): ?>
-    <ul class="cs-image-teaser__pagination <?= $block->getVar('image_teaser/pagination/additional_css_classes') ?>"></ul>
-<?php endif; ?>
+<div class="cs-slider-pagination cs-image-teaser__pagination <?= $block->getVar('image_teaser/pagination/additional_css_classes') ?>"></div>
