--- a/view/frontend/templates/product/list/category-teasers.phtml
+++ b/view/frontend/templates/product/list/category-teasers.phtml
@@ -13,60 +13,61 @@
 ?>
 <?php
 $paginationViewModel = $block->getPaginationViewModel();
-$teasersConfig = $this->helper('MageSuite\ContentConstructorFrontend\Helper\CategoryGridTeasers')->getConfig();
-if ($teasersConfig): ?>
-    <?php $i = 1 ?>
+$showOnlyOnFirstPage = $block->getShowTeasersOnlyOnFirstPage();
 
-    <?php foreach ($teasersConfig['teasers'] as $teaser): ?>
+if (!$showOnlyOnFirstPage || ($showOnlyOnFirstPage && $paginationViewModel->isFirstPage())) {
+    $teasersConfig = $this->helper('MageSuite\ContentConstructorFrontend\Helper\CategoryGridTeasers')->getConfig();
 
-        <?php if (isset($teaser['displayVariant'])): ?>
-            <?= $this->getLayout()
-                ->createBlock(\Magento\Framework\View\Element\Template::class)
-                ->setTeaserData($teaser)
-                ->setTeaserId($i)
-                ->setHtmlTag($block->getHtmlTag())
-                ->setGridClass($block->getGridClass())
-                ->setBrickClass($block->getBrickClass())
-                ->setTemplate('MageSuite_ContentConstructorFrontend::teaser.phtml')
-                ->toHtml(); ?>
-        <?php else: ?>
-            <?php
-            $newTeaserConfig = array(
-                "scenario" => array(
-                    'desktopLayout' => array(
-                        'id' => 1,
+    if ($teasersConfig) { ?>
+        <?php
+            $teasersSetId = $block->getTeasersSetId();
+        ?>
+        <?php foreach ($teasersConfig['teasers'] as $i => $teaser): ?>
+            <?php if (isset($teaser['displayVariant'])): ?>
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTeaserData($teaser)
+                    ->setTeaserId($teasersSetId . '-' . $i)
+                    ->setHtmlTag($block->getHtmlTag())
+                    ->setGridClass($block->getGridClass())
+                    ->setBrickClass($block->getBrickClass())
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::teaser.phtml')
+                    ->toHtml(); ?>
+            <?php else: ?>
+                <?php
+                $newTeaserConfig = array(
+                    "scenario" => array(
+                        'desktopLayout' => array(
+                            'id' => 1,
+                        ),
+                        'mobileLayout' => array(
+                            'id' => 'mobile-large',
+                        ),
+                        'contentPlacement' => array(
+                            'id' => 'over',
+                        ),
+                        'teaserWidth' => array(
+                            'id' => 'window',
+                        )
                     ),
-                    'mobileLayout' => array(
-                        'id' => 'mobile-large',
+                    "items" => array(
+                        0 => $teaser,
                     ),
-                    'contentPlacement' => array(
-                        'id' => 'over',
-                    ),
-                    'teaserWidth' => array(
-                        'id' => 'window',
-                    )
-                ),
-                "items" => array(
-                    0 => $teaser,
-                ),
-            );
-            ?>
+                );
+                ?>
 
-            <?= $this->getLayout()
-                ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
-                ->setData($newTeaserConfig)
-                ->setGridTeaser(true)
-                ->setTeaserId($i)
-                ->setTeaserData($teaser)
-                ->setBrickClass($block->getBrickClass())
-                ->setMix('cs-image-teaser--grid-teaser ' . $block->getMix())
-                ->setContainerMix('cs-container--grid-teaser ' . $block->getContainerMix())
-                ->toHtml();
-            ?>
-        <?php endif; ?>
-
-        <?php $i++ ?>
-    <?php endforeach; ?>
-
-    <input type="hidden" class="image-teasers-data" value='<?= json_encode($teasersConfig['json']); ?>'>
-<?php endif; ?>
+                <?= $this->getLayout()
+                    ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
+                    ->setData($newTeaserConfig)
+                    ->setGridTeaser(true)
+                    ->setTeaserId($teasersSetId . '-' . $i)
+                    ->setTeaserData($teaser)
+                    ->setBrickClass($block->getBrickClass())
+                    ->setMix('cs-image-teaser--grid-teaser ' . $block->getMix())
+                    ->setContainerMix('cs-container--grid-teaser ' . $block->getContainerMix())
+                    ->toHtml();
+                ?>
+            <?php endif; ?>
+        <?php endforeach; ?>
+    <?php } ?>
+<?php } ?>
