--- a/view/frontend/templates/component/icon.phtml
+++ b/view/frontend/templates/component/icon.phtml
@@ -14,15 +14,17 @@ $jsSettings = $block->getVar('icon/js') ?: [
         ]
     ]
 ];
-$iconConfiguration['jsConfig'] = array_merge(
-    $jsSettings,
-    $iconConfiguration['jsConfig'] ?? []
-);
+// Build JS config
+$jsSettings = $block->getVar('hero_carousel/js');
+if (empty($jsSettings)) {
+    $jsSettings = [];
+}
 
 echo $this->getLayout()
     ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
     ->setData($iconConfiguration)
     ->setMix('cs-image-teaser--icon ' . $block->getMix())
     ->setContainerMix('cs-container--icon ' . $block->getContainerMix())
+    ->setAdditionalJsSettings($jsSettings)
     ->toHtml();
 ?>
