--- a/view/frontend/templates/component/image_teaser/slide_elements/cta.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/cta.phtml
@@ -7,18 +7,19 @@ $slide = $block->getSlide();
 $cta = $slide->getCta();
 $ctaHref = $cta['href'] ?? '';
 $ctaLabel = $cta['label'] ?? '';
+$iconPath = $block->getVar('image_teaser/cta_button_icon_path', 'MageSuite_ContentConstructorFrontend');
 ?>
 <?php if ($ctaHref and $ctaLabel): ?>
     <div class="cs-image-teaser__cta">
-        <span class="cs-image-teaser__cta-button">
-            <span class="cs-image-teaser__cta-button-span"><?= $ctaLabel ?></span>
+        <span class="cs-image-teaser__cta-span"><?= $ctaLabel ?></span>
+        <?php if(!empty($iconPath)): ?>
             <?= $this->getLayout()
                 ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                ->setIconUrl($block->getVar('image_teaser/cta_button_icon_path', 'MageSuite_ContentConstructorFrontend'))
-                ->setCssClass('cs-image-teaser__cta-button-icon')
+                ->setIconUrl($iconPath)
+                ->setCssClass('cs-image-teaser__cta-icon')
                 ->setInlined(true)
                 ->toHtml();
             ?>
-        </span>
+        <?php endif ?>
     </div>
 <?php endif; ?>
