--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -1,38 +1,25 @@
 <?php
-/** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ProductGrid */
-$componentConfiguration = $block->getData();
-
+/**
+ * @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ProductGrid
+ * @var $teaserCss \MageSuite\ContentConstructorFrontend\Helper\TeaserCss
+ */
 $viewModel = $block->getViewModel();
+$teaserCss = $this->helper(\MageSuite\ContentConstructorFrontend\Helper\TeaserCss::class);
 $visibility = $block->getVisibilityClass();
-
 $items = $viewModel->getItems();
-
 $componentClasses = $block->getSkipSpacing() ? ' cs-products-grid--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('product_grid/additional_css_classes');
 $productsGridJsSettings = json_encode($block->getVar('grid_layout/product_grid/js') ?: '{}');
-
-$containerClasses = $block->getContainerMix();
-if (isset($componentConfiguration['cc_css_classes'])):
-    $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
-endif;
+$products = $viewModel->getProducts();
+$teasersSetRandId = $teaserCss->getUniqueComponentId();
 ?>
-
 <?= $block->getCssOnce('css/products-grid.css'); ?>
 <?= $block->getCssOnce('css/grid-layout.css'); ?>
-
-<div class="cs-container cs-container--products-grid<?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
+<div class="cs-container cs-container--products-grid<?= $visibility ? ' ' .$visibility : ''; ?>">
     <div class="cs-container__inner">
-        <div class="cs-products-grid<?php if ($viewModel->useTeaser()): ?> cs-products-grid--teaser<?php endif; ?><?= $componentClasses ?>"
-                data-rows-mobile="<?= $viewModel->getRowsMobile() ?>"
-                data-rows-tablet="<?= $viewModel->getRowsTablet() ?>"
-                data-rows-desktop="<?= $viewModel->getRowsDesktop() ?>"
-                data-mage-init='{ "mgsGridLayout": <?= $productsGridJsSettings ?> }'
-        >
-            <?php
-            $teasersConfiguration = $viewModel->getTeasersConfiguration();
-            ?>
+        <div class="cs-products-grid<?= $componentClasses ?>">
             <div class="cs-grid-layout cs-products-grid__grid-layout">
-                <ul class="cs-grid-layout__grid cs-products-grid__grid">
+                <ul class="cs-grid-layout__grid cs-products-grid__grid" id="pg-<?= $teasersSetRandId ?>">
                     <?php if(!empty($items) && $viewModel->useTeaser()): ?>
                         <?php
                             $newTeaserConfig = [
@@ -58,7 +45,7 @@ endif;
                             ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
                             ->setData($newTeaserConfig)
                             ->setGridTeaser(true)
-                            ->setTeaserId('0')
+                            ->setTeaserId($teasersSetRandId . '-0')
                             ->setTeaserData($items[0])
                             ->setBrickClass('cs-grid-layout__brick')
                             ->setMix('cs-image-teaser--grid-teaser ' . $block->getMix())
@@ -66,15 +53,27 @@ endif;
                             ->toHtml();
                         ?>
                     <?php endif; ?>
-                    <?php foreach ($viewModel->getProducts() as $product): ?>
+                    <?php foreach ($products as $product): ?>
                         <li class="cs-grid-layout__brick cs-products-grid__item">
                             <?= $viewModel->renderProductTile($product, null) ?>
                         </li>
                     <?php endforeach ?>
                 </ul>
-                <?php if(!empty($items) && $viewModel->useTeaser()): ?>
-                    <input type="hidden" class="image-teasers-data" value='[<?= json_encode($teasersConfiguration) ?>]'>
-                <?php endif; ?>
+                <?= $this->getLayout()
+                    ->createBlock(\MageSuite\ContentConstructorFrontend\Block\TeaserCss::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::teasers-css.phtml')
+                    ->setUseTeasers($viewModel->useTeaser())
+                    ->setTeasersConfig([$viewModel->getTeasersConfiguration()])
+                    ->setTeasersSetId($teasersSetRandId)
+                    ->setProductsCount(count($products))
+                    ->setIsProductsGrid(true)
+                    ->setPgId('pg-' . $teasersSetRandId)
+                    ->setRowsConfig([
+                        'mobile' => $viewModel->getRowsMobile(),
+                        'tablet' => $viewModel->getRowsTablet(),
+                        'desktop' => $viewModel->getRowsDesktop()
+                    ])
+                    ->toHtml(); ?>
             </div>
         </div>
     </div>
